--- a/themes/basetheme/assets/css/taskapp/taskapp.scss
+++ b/themes/basetheme/assets/css/taskapp/taskapp.scss
@@ -1,6 +1,6 @@
-@import "../../../../node_modules/bulma/sass/utilities/initial-variables";
-@import "../../../../node_modules/bulma/bulma";
-@import "../../../../node_modules/bulma-extensions/dist/css/bulma-extensions.min.css";
+@import "../../../../../node_modules/bulma/sass/utilities/initial-variables";
+@import "../../../../../node_modules/bulma/bulma";
+@import "../../../../../node_modules/bulma-extensions/dist/css/bulma-extensions.min.css";
 @import "./vendor/bulmaswatch/bulmaswatch";
 
 .white-font {
